--- a/me/templates/dotfiles/gitconfig.erb
+++ b/me/templates/dotfiles/gitconfig.erb
@@ -49,3 +49,6 @@
   added = yellow
   changed = green
   untracked = cyan
+[alias]
+   logg = log --graph --decorate
+   lol = log --graph --decorate --pretty=oneline --abbrev-commit
