Introduces git tempalte with hooks

--- a/me/templates/dotfiles/gitconfig.erb
+++ b/me/templates/dotfiles/gitconfig.erb
@@ -52,3 +52,5 @@
 [alias]
    logg = log --graph --decorate
    lol = log --graph --decorate --pretty=oneline --abbrev-commit
+[init]
+    templatedir = ~/.git_template
