--- a/me/templates/dotfiles/gitconfig.erb
+++ b/me/templates/dotfiles/gitconfig.erb
@@ -52,3 +52,4 @@
 [alias]
    logg = log --graph --decorate
    lol = log --graph --decorate --pretty=oneline --abbrev-commit
+   lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
